<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/login"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/WelcomeText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:text="@string/wecome_page"
            android:textColor="#AF73EA"
            android:textSize="34sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="112dp"
            tools:layout_editor_absoluteY="148dp" />

        <TextView
            android:id="@+id/EmailIdText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/email_id"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/EmailId"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:autofillHints="emailAddress"
            android:hint="@string/enter_your_email_id"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/PasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/password"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:autofillHints="" />

        <Button
            android:id="@+id/button2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/log_in" />

        <TextView
            android:id="@+id/ForgotPasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:linksClickable="true"
            android:text="@string/forgot_password" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>